Modify pom.xml